# cloud-pilot

./: .gitignore  README.md  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml
backend/: .env  .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml  run.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/cdk_test/: app.py  stack.py
backend/cdk_test/cdk.out/: CloudPilotTestStack.assets.json  CloudPilotTestStack.template.json  manifest.json  tree.json
backend/src/: __init__.py  api.py  api2.py  client.py  constants.py  graph.py  main.py  server.py  state.py
backend/src/agents/: __init__.py  architecture_agent.py  cdk_generator_agent.py  file_system_agent.py  interpreter_agent.py  terraform_agent.py  tf_generator_agent.py  tf_generator_agent_vars.py
backend/src/nodes/: __init__.py  analyze_terraform.py  execute_terraform.py  file_system_operations.py  generate_terraform.py  plan_approval.py  terraform_plan.py  terraform_show.py  user_interaction.py
backend/terraform_prod/: .terraform.tfstate.lock.info  main.tf  out.json  plan.json  show.json  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  tfplan  tfplan.json  variables.tf
backend/terraform_prod/terraform_prod/: main.tf  (+1 more)
backend/terraform_templates/: aws_s3_bucket.tf
backend/tests/: __init__.py  conftest.py  test_cdk_generator.py  test_execute_terraform.py  test_file_system_agent.py  test_generate_terraform.py  test_graph.py  test_terraform_agent.py  test_terraform_plan.py
(+51 files in other folders)
