[project]
name = "cloud-pilot"
version = "0.1.0"
description = "An agentic project using LangGraph for Terraform automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.0.19",
    "llama-index>=0.9.11",
    "llama-index-llms-openai>=0.1.5",
    "llama-index-embeddings-openai>=0.1.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pytest>=7.4.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true